@@ -77,7 +77,6 @@ static char sccsid[] = "@(#)commands.l	5.13 (Berkeley) 7/24/90";
  *	exit		- exit the program
  *	root		- set default server to the root
  *	ls NAME		- list the domain NAME
- *	view FILE	- sorts and view the file with more
  *	set OPTION	- set an option
  *	help		- print help information
  *	?		- print help information
@@ -103,7 +102,6 @@ static char sccsid[] = "@(#)commands.l	5.13 (Berkeley) 7/24/90";
 
 extern char rootServerName[];
 extern void PrintHelp();
-extern void ViewList(char *);
 
 #define YY_INPUT(buf, result, max_size) \
 	{ \
